--- a/src/app/components/offical-holiday-form/offical-holiday-form.component.html
+++ b/src/app/components/offical-holiday-form/offical-holiday-form.component.html
@@ -97,7 +97,7 @@
         </ng-container>
         }
       </div>
-      <div class="mb-3">
+      <!-- <div class="mb-3">
         <label for="numberOfDays" class="form-label"><span class="text-danger me-1">*</span>Number Of Days</label>
         <input
           type="number"
@@ -115,7 +115,7 @@
           }
         </ng-container>
         }
-      </div>
+      </div> -->
   
       <div class="d-flex justify-content-end my-5">
         <button type="submit" class="btn btn-add px-4">
