show user name in navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
                     <i class="bi bi-x position-absolute" style="color: #e94d65; top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
                 </div>
             </form>
-            <span class="navbar-text" style="color: #173d51;">Hello, Name</span>
+            <span class="navbar-text" style="color: #173d51;">Hello, {{ userName }}</span>
         </div>
     </div>
 </nav>
