--- a/src/app/pages/salary/salary.component.html
+++ b/src/app/pages/salary/salary.component.html
@@ -25,8 +25,8 @@
         <select [(ngModel)]="month" class="form-control date-input me-2">
             <option *ngFor="let month of months" [value]="month.value">{{ month.name }}</option>
           </select>
-          
-      
+
+
         <label class="me-2">Year</label>
         <input
           type="number"
@@ -35,12 +35,12 @@
           min="2008" max="2100" step="1"
           placeholder="Select Year"
         />
-      
+
         <button class="btn btn-outline-add filter-button" (click)="filterByDate()">
           Filter by Month and Year
         </button>
       </div>
-      
+
 <div className="table-responsive mb-3">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="EmployeeName" class="col-1">
@@ -59,7 +59,7 @@
         <th mat-header-cell *matHeaderCellDef> Absence Days</th>
         <td mat-cell *matCellDef="let salary"> {{salary.absence_days}} </td>
       </ng-container>
-    
+
       <ng-container matColumnDef="TotalBounsHours">
         <th mat-header-cell *matHeaderCellDef> Total Bonus Hours</th>
         <td mat-cell *matCellDef="let salary"> {{salary.total_bonus_hours| number: '1.2-2'}} </td>
@@ -83,8 +83,15 @@
             <td mat-cell *matCellDef="let salary"> {{salary.total_salary | number: '1.2-2'}} </td>
           </ng-container>
         </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let salary" class="text-center">
+            <i class="bi bi-printer icon" role="button" (click)="printSalary(salary)"></i>
+          </td>
+        </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> 
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <!-- confirm delete -->
 
