--- a/src/app/components/attendance-form/attendance-form.component.html
+++ b/src/app/components/attendance-form/attendance-form.component.html
@@ -1,6 +1,11 @@
 <div class="container px-5 py-3">
     <app-page-title [title]="attendanceId == 0 ? 'Add New Attendance' : 'Edit Attendance'"></app-page-title>
-  
+    <!-- backend error -->
+     @if(error){
+      <div class="alert alert-danger">
+        {{ error }}
+      </div>
+     }
     <form (submit)="attendanceHandler($event)" [formGroup]="attendanceForm" class="w-50 mt-5">
       <div class="mb-3">
         <label for="employee_id" class="form-label"><span class="text-danger me-1">*</span>Employee Name</label>
@@ -18,7 +23,7 @@
           </div>
         </ng-container>
       </div>
-  
+
       <div class="mb-3">
         <label for="checkIN" class="form-label"><span class="text-danger me-1">*</span>Check-In Time</label>
         <input
@@ -33,7 +38,7 @@
           </div>
         </ng-container>
       </div>
-  
+
       <div class="mb-3">
         <label for="checkOUT" class="form-label"><span class="text-danger me-1">*</span>Check-Out Time</label>
         <input
@@ -48,7 +53,7 @@
           </div>
         </ng-container>
       </div>
-  
+
       <div class="mb-3">
         <label for="date" class="form-label"><span class="text-danger me-1">*</span>Date</label>
         <input
@@ -63,7 +68,7 @@
           </div>
         </ng-container>
       </div>
-  
+
       <div class="d-flex justify-content-end my-5">
         <button type="submit" class="btn btn-add px-4">
           {{ attendanceId == 0 ? 'Add Attendance' : 'Edit Attendance' }}
@@ -71,4 +76,3 @@
       </div>
     </form>
   </div>
-  
