--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -49,7 +49,7 @@
     <app-confirm-modal
       (confirmed)="confirmDelete()"
       (closed)="closeModal()"
-      [message]="'Are you sure you want to delete this department?'" />
+      [message]="'Are you sure you want to delete this group?'" />
     }
 
     <mat-paginator [length]="totalDepartments" [pageSize]="5"
