--- a/src/app/pages/groups/groups.component.html
+++ b/src/app/pages/groups/groups.component.html
@@ -6,38 +6,44 @@
         <i class="bi bi-x-lg ms-5" (click)="closeMessage()" role="button"></i>
     </div> 
     }-->
-    <div class="d-flex justify-content-end align-items-center mb-4">
+    <div class="d-flex justify-content-end align-items-center mb-4"> 
         <app-add-button [entity]="'Group'" [routerLink]="['/groups/add']" />
     </div>
 
     <div className="table-responsive mb-4">
         <table mat-table class="mat-elevation-z8">
             <ng-container matColumnDef="id" class="col-1">
-                <th mat-header-cell > ID </th>
-                <td mat-cell > 1 </td>
+                <th mat-header-cell *matHeaderCellDef> ID </th>
+                <td mat-cell *matCellDef="let group"> 1 </td>
             </ng-container>
 
             <ng-container matColumnDef="name" class="col-4">
-                <th mat-header-cell > Name </th>
-                <td mat-cell > CEO Manager </td>
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let group"> CEO Manager </td>
             </ng-container>
 
             <!-- Add other columns as needed -->
             <ng-container matColumnDef="action" class="col-7">
-                <th mat-header-cell > Action </th>
-                <td mat-cell >
-                    <button class="btn btn-view me-2"><i
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let group">
+                    <button class="btn btn-view me-2" [routerLink]="['/groups', group.id]"><i
                             class="bi bi-eye"></i>
                         View</button>
-                    <button class="btn btn-delete mx-2">
+                    <button class="btn btn-delete mx-2"
+                    (click)="openDeleteModal(group.id)">
                         <i class="bi bi-x-lg"></i> Delete
                     </button>
                 </td>
             </ng-container>
 
-            <tr mat-header-row ></tr>
-            <tr mat-row ></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
+        @if(showModal){
+            <app-confirm-modal
+            (confirmed)="confirmDelete()"
+            (closed)="closeModal()"
+            [message]="'Are you sure you want to delete this department?'" />
+        }
     </div>
 </div>
