--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -33,6 +33,9 @@
       <i class="bi bi-x position-absolute clear-search"  (click)="clearSearch()"></i>
     </div>
   </div>
+  @if(noResultsMessage){
+    <p class="text-center text-danger">{{ noResultsMessage }}</p>
+  }
    <!-- add btn components -->
   <div class="d-flex justify-content-end align-items-center mb-3">
       <app-add-button [entity]="'Employee'"
