--- a/src/app/pages/salary/salary.component.html
+++ b/src/app/pages/salary/salary.component.html
@@ -27,6 +27,11 @@
         (click)="clearSearch()"></i>
     </div>
   </div>
+  @if(noResultsMessage){
+    <div class="alert alert-danger">
+     {{noResultsMessage}}
+    </div>
+  }
 
   <div class="d-flex justify-content-center align-items-center mb-4">
     <label class="me-2">Month</label>
@@ -55,8 +60,12 @@
         <td mat-cell *matCellDef="let salary"> {{salary.name}} </td>
       </ng-container>
       <ng-container matColumnDef="DepartmentName">
-        <th mat-header-cell *matHeaderCellDef> Department Name </th>
+        <th mat-header-cell *matHeaderCellDef> Department </th>
         <td mat-cell *matCellDef="let salary"> {{salary.department.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="salary">
+        <th mat-header-cell *matHeaderCellDef> Salary </th>
+        <td mat-cell *matCellDef="let salary"> {{salary.salary}} </td>
       </ng-container>
       <ng-container matColumnDef="WorkDays">
         <th mat-header-cell *matHeaderCellDef> Work Days </th>
@@ -68,12 +77,12 @@
       </ng-container>
 
       <ng-container matColumnDef="TotalBounsHours">
-        <th mat-header-cell *matHeaderCellDef> Total Bonus Hours</th>
+        <th mat-header-cell *matHeaderCellDef> Bonus Hours</th>
         <td mat-cell *matCellDef="let salary"> {{salary.total_bonus_hours|
           number: '1.2-2'}} </td>
       </ng-container>
       <ng-container matColumnDef="TotalDeductionsHours">
-        <th mat-header-cell *matHeaderCellDef> Total Deduction Hours</th>
+        <th mat-header-cell *matHeaderCellDef> Deduction Hours</th>
         <td mat-cell *matCellDef="let salary"> {{salary.total_deduction_hours|
           number: '1.2-2'}}
         </td>
@@ -90,7 +99,7 @@
           number: '1.2-2'}}
         </td>
         <ng-container matColumnDef="totalsalary">
-          <th mat-header-cell *matHeaderCellDef> Salary </th>
+          <th mat-header-cell *matHeaderCellDef> Total Salary </th>
           <td mat-cell *matCellDef="let salary"> {{salary.total_salary | number:
             '1.2-2'}} </td>
         </ng-container>
